--- a/components/layout.templ
+++ b/components/layout.templ
@@ -11,7 +11,7 @@ templ Layout(title string) {
 			<script src="/static/js/htmx.min.js"></script>
 		</head>
 		<body
-			class="bg-gray-900 h-full w-screen text-white
+			class="bg-black h-full w-screen text-white
 			       [background-image:radial-gradient(circle,_#3b82f64d_1px,_transparent_1px)]
 			       [background-size:32px_32px]"
 		>
