feat: responsive grids

--- a/components/index.templ
+++ b/components/index.templ
@@ -13,7 +13,7 @@ templ Index(name string, initialCount int) {
 					<div class="w-2 h-2 rounded-full bg-sky-400"></div>
 					<div class="flex-1 h-px bg-gradient-to-l from-transparent to-sky-400"></div>
 				</div>
-				<div class="w-full p-4 m-4 grid grid-cols-4 gap-4">
+				<div class="w-full p-4 m-4 grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
 					<div class="bg-teal-400/25 aspect-video"></div>
 					<div class="bg-teal-400/25 aspect-video"></div>
 					<div class="bg-teal-400/25 aspect-video"></div>
